Fix top header buttons in mobile dialog are not top aligned

--- a/pixelegg/mobile/fw_mobile.css
+++ b/pixelegg/mobile/fw_mobile.css
@@ -9048,6 +9048,9 @@ table.egwGridView_grid img.et2_appicon {
   body .popupMainDiv form.et2_container div table.et2_grid tbody tr .row td .et2_box_widget input {
     margin: 0 5px 0 0;
   }
+  body .popupMainDiv table.et2_grid > tbody > tr > td:last-child {
+    padding-top: 0;
+  }
   body div#popupMainDiv {
     padding: 0;
   }
